--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "axios": "^0.19.0",
     "babel-polyfill": "^6.26.0",
+    "jsonwebtoken": "^8.5.1",
     "koa": "^2.11.0",
     "koa-router": "^7.4.0",
-    "require-directory": "^2.1.1"
+    "require-directory": "^2.1.1",
+    "validator": "^12.1.0"
   },
   "devDependencies": {
     "babel-preset-env": "^1.7.0",
