--- a/package.json
+++ b/package.json
@@ -1,24 +1,50 @@
 {
-  "name": "island",
+  "name": "nodejs-koa2-wxapp",
   "version": "1.0.0",
-  "description": "",
+  "description": "Node.js + Koa2实战小程序项目",
   "main": "index.js",
   "scripts": {
+    "dev": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "axios": "^0.19.0",
-    "babel-polyfill": "^6.26.0",
-    "jsonwebtoken": "^8.5.1",
-    "koa": "^2.11.0",
-    "koa-router": "^7.4.0",
-    "require-directory": "^2.1.1",
-    "validator": "^12.1.0"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/liangfengbo/nodejs-koa2-wxapp.git"
   },
-  "devDependencies": {
-    "babel-preset-env": "^1.7.0",
-    "babel-register": "^6.26.0"
+  "keywords": [
+    "nodejs",
+    "koa2"
+  ],
+  "author": "https://github.com/liangfengbo",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/liangfengbo/nodejs-koa2-wxapp/issues"
+  },
+  "homepage": "https://github.com/liangfengbo/nodejs-koa2-wxapp#readme",
+  "dependencies": {
+    "axios": "^0.18.0",
+    "basic-auth": "^2.0.1",
+    "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^8.4.0",
+    "koa": "^2.7.0",
+    "koa-bodyparser": "^4.2.1",
+    "koa-router": "^7.4.0",
+    "koa-static": "^5.0.0",
+    "lodash": "^4.17.11",
+    "module-alias": "^2.2.0",
+    "mysql2": "^1.6.5",
+    "npm-check": "^5.9.0",
+    "require-directory": "^2.1.1",
+    "sequelize": "^5.6.1",
+    "validator": "^10.11.0"
+  },
+  "directories": {
+    "test": "test"
+  },
+  "_moduleAliases": {
+    "@root": ".",
+    "@models": "app/models",
+    "@validators": "app/validators",
+    "@middlewares": "middlewares"
   }
 }
